Stop fullpage from jumping on mobile

--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ h1, h2, h3, h4, h5 {
 }
 .about-text {
   margin-top: 10px;
+  font-size: 1.25em;
 }
 .my-picture-container {
   margin-top: 4vh;
